--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,13 @@ categories = ["command-line-utilities", "development-tools"]
 
 [build-dependencies]
 clap = { version = "4.0.14", features = ["derive"] }
+clap-verbosity-flag = "2.0.0"
 clap_mangen = "0.2.3"
 debug-ignore = "1.0.3"
 exitcode = "1.1.2"
 json = "0.12.4"
 linked-hash-map = "0.5.6"
 log = "0.4.17"
-log4rs = "1.2.0"
 serde = "1.0.145"
 serde_json = "1.0.87"
 serde_yaml = "0.9.14"
@@ -28,12 +28,13 @@ yaml-rust = "0.4.5"
 
 [dependencies]
 clap = { version = "4.0.14", features = ["derive"] }
+clap-verbosity-flag = "2.0.0"
 debug-ignore = "1.0.3"
+env_logger = "0.10.0"
 exitcode = "1.1.2"
 json = "0.12.4"
 linked-hash-map = "0.5.6"
 log = "0.4.17"
-log4rs = "1.2.0"
 serde = "1.0.145"
 serde_json = "1.0.87"
 serde_yaml = "0.9.14"
