--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ authors = ["sbrfs77"]
 version = "0.2.4"
 edition = "2021"
 license = "Apache-2.0"
-description = "Procon (Pro)perty (Con)verter \nA programm to convert between different property formats."
+description = "Procon (Pro)perty (Con)verter \nA program to convert between different property formats."
 repository = "https://github.com/Ben7X/procon"
 readme = "README.md"
 keywords = ["property_file", "yaml", "yml", "json", "conversion"]
@@ -33,6 +33,7 @@ clap-verbosity-flag = "2.0.0"
 debug-ignore = "1.0.3"
 env_logger = "0.10.0"
 exitcode = "1.1.2"
+is-terminal = "0.4.2"
 json = "0.12.4"
 linked-hash-map = "0.5.6"
 log = "0.4.17"
