--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,39 +1,42 @@
 [package]
 name = "procon"
 authors = ["sbrfs77"]
-version = "0.2.4"
+version = "0.2.5"
 edition = "2021"
 license = "Apache-2.0"
-description = "Procon (Pro)perty (Con)verter \nA programm to convert between different property formats."
+description = "Procon (Pro)perty (Con)verter \nA program to convert between different property formats."
 repository = "https://github.com/Ben7X/procon"
 readme = "README.md"
-keywords = ["property_file", "yaml", "yml", "json", "conversion"]
+keywords = ["procon", "property_file", "yaml", "json", "conversion"]
 categories = ["command-line-utilities", "development-tools"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
 clap = { version = "4.0.14", features = ["derive"] }
+clap-verbosity-flag = "2.0.0"
 clap_mangen = "0.2.3"
 debug-ignore = "1.0.3"
 exitcode = "1.1.2"
 json = "0.12.4"
 linked-hash-map = "0.5.6"
 log = "0.4.17"
-log4rs = "1.2.0"
 serde = "1.0.145"
 serde_json = "1.0.87"
 serde_yaml = "0.9.14"
 yaml-rust = "0.4.5"
 
 [dependencies]
+anyhow = "1.0.68"
 clap = { version = "4.0.14", features = ["derive"] }
+clap-verbosity-flag = "2.0.0"
 debug-ignore = "1.0.3"
+env_logger = "0.10.0"
 exitcode = "1.1.2"
+is-terminal = "0.4.2"
 json = "0.12.4"
 linked-hash-map = "0.5.6"
 log = "0.4.17"
-log4rs = "1.2.0"
 serde = "1.0.145"
 serde_json = "1.0.87"
 serde_yaml = "0.9.14"
