--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ serde = "1.0.145"
 serde_json = "1.0.87"
 serde_yaml = "0.9.14"
 thiserror = "1.0.38"
+toml = "0.7.0"
 yaml-rust = "0.4.5"
 
 [dependencies]
@@ -43,4 +44,5 @@ serde = "1.0.145"
 serde_json = "1.0.87"
 serde_yaml = "0.9.14"
 thiserror = "1.0.38"
+toml = "0.7.0"
 yaml-rust = "0.4.5"
